# mca-tools

./: .gitignore  CITATION.cff  README.md  peakSelector.py  pyproject.toml  translations.py  uncertainty.py
csv_path/: Eu.csv
src/mca_tools/: __init__.py  calibration.py  helpers.py  operations.py  options.py  peakSelector.py  translations.py  uncertainty.py
test/: Eu.mca  test_peakSelector.py
