[project]
name = "mca-tools"
version = "0.5.0"
description = "Set of tools to postprocess the data of a spectrogram made with a Multichannel analyzer (mca) "
readme = "README.md"
authors = [
    { name = "Diego Couto", email = "mail@diegocoutogarcia.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "pyqt6>=6.10.2",
    "scienceplots>=2.2.1",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.11.0",
]
